--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "mock",
     "server"
   ],
-  "author": "Your Name",
+  "author": "arpitgupta2405",
+  "owner": "arpitgupta2405",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arpitgupta2405/bullHorn-server"
+  },
   "license": "MIT",
   "dependencies": {
     "express": "4.18.2",
